--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "@hotwired/stimulus": "^3.1.1",
     "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.6",
-    "pixi.js": "7.0.4",
+    "@rails/ujs": "^7.0.4",
     "bootstrap": "^5.2.3",
+    "pixi.js": "7.0.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
