--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.6",
     "@rails/ujs": "^7.0.4",
     "bootstrap": "^5.2.3",
+    "pixi-filters": "^5.0.0",
     "pixi.js": "7.0.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
